--- a/views/index.erb
+++ b/views/index.erb
@@ -14,5 +14,6 @@
       <input type="submit" value="Decrement">
     </form>
     <div id="count"><%= @counter.count %></div>
+    <div id="time"><%= @counter.time.strftime("Last updated at %T") %></div>
   </body>
 </html>
