--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,10 @@
     <form action="/decrement" method="post">
       <input type="submit" value="Decrement">
     </form>
+
+    <form action="/reset" method="post">
+      <input type="submit" value="Reset">
+    </form>
     <div id="count"><%= @counter.count %></div>
     <div id="time"><%= @counter.time.strftime("Last updated at %T") %></div>
   </body>
